gcc/testsuite/rust/rustc/ui/type-alias-impl-trait/different_defining_uses_never_type-2_dg.rs
#![feature(type_alias_impl_trait)]

type Tait<'a> = impl Sized + 'a;

fn foo<'a, 'b>() -> Tait<'a> {
    if false {
        if { return } {
            let y: Tait<'b> = 1i32;
// { dg-error "" "" { target *-*-* } .-1 }
        }
    }
    let x: Tait<'a> = ();
    x
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

